--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://jeong-wonho.github.io/my_first_coin/"
+  "homepage": "https://Jeong-wonho.github.io/my_first_coin/"
 }
